# InkyPi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEV_MODE_PLAN.md  PYTHON_FORMATTER_PLAN.md  README.md  devbox.json  pyproject.toml
.devcontainer/: Dockerfile  debian-requirements.txt  post-create.sh
.devcontainer/linux-host/: devcontainer.json
.devcontainer/windows-host/: devcontainer.json
.github/workflows/: formatting.yml  linting.yml
docs/: api_keys.md  attribution.md  building_plugins.md  community.md  devcontainers.md  development.md  fonts.md  installation.md  mounting_shared_folder.md  troubleshooting.md
install/: debian-requirements.txt  inkypi  inkypi.service  install.sh  requirements-dev.txt  requirements.txt  servo-requirements.txt  update.sh  update_vendors.sh
install/cli/: inkypi-plugin
install/config_base/: device.json  plugins.json
scripts/: install_icons_pi.py  make_adguard_icon.py  make_plugin_icons.py  test_bbc_news.py  test_plugin.py  update_vendors.sh  venv.sh
src/: .env.example  button_handler.py  config.py  display_manager.py  inkypi.py  model.py  playlist.py  refresh_task.py  wifi.py
src/blueprints/: apikeys.py  config.py  dev.py  dev_dashboard.py  display.py  main.py  playlist.py  plugin.py  plugin_manage.py  plugin_manager.py  settings.py
src/buttons/: __init__.py  abstract_button_handler.py  button_manager.py  gpio_button_handler.py  inky_button_handler.py  mock_button_handler.py
src/config/: device.json  device_dev.json
src/display/: abstract_display.py  display_manager.py  inky_display.py  mock_display.py  waveshare_display.py
src/display/waveshare_epd/: epd7in3e.py
src/inkypi/: config.py  inkypi.py  model.py  refresh_task.py
src/inkypi/blueprints/: main.py  playlist.py  plugin.py  settings.py
src/inkypi/config/: logging.conf
src/inkypi/display/: abstract_display.py  display_manager.py  inky_display.py  waveshare_display.py
src/inkypi/plugins/: plugin_registry.py
src/inkypi/templates/: playlist.html  plugin.html  response_modal.html  settings.html
src/inkypi/utils/: app_utils.py  image_utils.py
src/plugins/: plugin_registry.py  plugins.json
src/plugins/adguard_home/: adguard_home.py  plugin-info.json  settings.html
src/plugins/ai_image/: ai_image.py
src/plugins/ai_text/: ai_text.py  settings.html
src/plugins/apod/: apod.py  settings.html
src/plugins/base_plugin/: base_plugin.py  rendered.html
src/plugins/bbc_news/: bbc_news.py  plugin-info.json  settings.html
src/plugins/calendar/: calendar.py  image_calendar.py  settings.html
src/plugins/calendar_view/: calendar_view.py  image_calendar.py  settings.html
src/plugins/clock/: clock.py
src/plugins/colors/: colors.py  plugin-info.json  settings.html
src/plugins/comic/: comic.py  plugin-info.json
src/plugins/countdown/: Thumbs.db  countdown.py
src/plugins/crypto/: README.md  crypto.py  plugin-info.json  settings.html
src/plugins/crypto_portfolio/: crypto_portfolio.py  plugin-info.json  settings.html
src/plugins/daily_art/: daily_art.py
src/plugins/daily_quote/: daily_quote.py  plugin-info.json  settings.html
src/plugins/finance_tracker/: finance_tracker.py  plugin-info.json  settings.html
src/plugins/gallery_folder/: gallery_folder.py  settings.html
src/plugins/github/: github.py  github_contributions.py  github_sponsors.py  github_stars.py
src/plugins/github_sponsor/: github_sponsor.py  plugin-info.json  settings.html
src/plugins/github_stars/: github_stars.py  plugin-info.json  settings.html
src/plugins/history_today/: history_today.py  plugin-info.json  settings.html
src/plugins/image_album/: image_album.py  settings.html
src/plugins/image_folder/: image_folder.py  plugin-info.json  settings.html
src/plugins/image_upload/: image_upload.py  settings.html
src/plugins/image_url/: image_url.py  settings.html
src/plugins/immich/: immich.py  settings.html
src/plugins/immich_album/: README.md  immich_album.py  plugin-info.json  settings.html
src/plugins/joke_of_day/: joke_of_day.py  plugin-info.json  settings.html
src/plugins/logview/: logview.py  plugin-info.json  settings.html
src/plugins/moon_phase/: moon_phase.py  plugin-info.json  settings.html
src/plugins/newspaper/: newspaper.py
src/plugins/nhl_team_schedule/: nhl_team_schedule.py  plugin-info.json  settings.html
src/plugins/photo_frame/: photo_frame.py  plugin-info.json  settings.html
src/plugins/qweather/: plugin-info.json  qweather.py  settings.html
src/plugins/rss/: rss.py
src/plugins/rss_reader/: rss_reader.py  settings.html
src/plugins/screenshot/: screenshot.py  settings.html
src/plugins/servo_control/: README.md  plugin-info.json  servo_control.py  settings.html
src/plugins/stocktracker/: plugin-info.json  settings.html  stocktracker.py
src/plugins/text_render/: plugin-info.json  settings.html  text_render.py
src/plugins/today/: plugin-info.json  settings.html  today.py
src/plugins/todo_list/: settings.html  todo_list.py
src/plugins/top_stories/: plugin-info.json  settings.html  top_stories.py
src/plugins/transit_monitor/: plugin-info.json  settings.html  transit_monitor.py
src/plugins/unsplash/: README.md  plugin-info.json  settings.html  unsplash.py
src/plugins/vlrtrack/: formatted_matches.json  matches.json  plugin-info.json  settings.html  vlrparser.py  vlrtrack.py
src/plugins/weather/: settings.html  translations.py  weather.py
src/plugins/weather_dashboard/: weather_dashboard.py
src/plugins/word_of_the_day/: plugin-info.json  settings.html  word_of_the_day.py
src/plugins/wpotd/: wpotd.py
src/plugins/year_progress/: year_progress.py
src/static/css/: dev_dashboard.css  (+1 more)
src/templates/: apikeys.html  config.html  dev_dashboard.html  dev_preview.html  enhanced_preview.html  inky.html  playlist.html  plugin.html  plugin_manage.html  plugin_manager.html  plugin_settings.html  settings.html
src/utils/: app_utils.py  file_watcher.py  image_loader.py  image_utils.py  servo_utils.py  wifi.py
tests/: test_daily_art.py  test_plugin.py  venv.sh
tests/utils/: test_image_utils.py
(+109 files in other folders)
