[project]
name = "inkypi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Fatih Ak"},
]
requires-python = ">=3.10"
dependencies = [
    "cysystemd==2.0.1",
    "flask==3.1.1",
    "icalendar==6.3.1",
    "inky==2.1.0",
    "numpy==2.2.1",
    "openai==1.58.1",
    "pillow==11.0.0",
    "psutil==7.0.0",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "recurring-ical-events==3.7.0",
    "requests==2.32.3",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flask==3.1.1",
    "icalendar==6.3.1",
    "loguru>=0.7.3",
    "numpy==2.2.1",
    "pillow==11.0.0",
    "pre-commit>=4.2.0",
    "psutil==7.0.0",
    "python-dotenv==1.0.1",
    "pytz==2025.2",
    "recurring-ical-events==3.7.0",
    "requests==2.32.3",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
]


[tool.ruff.lint]
preview = true
select =  [
    "A",     # flake8-buildins
    "ANN",   # flake8-annotations
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "DOC",   # pydoclint
    "E",     # pycodestyle - errors
    "ERA",   # eradicate
    "F",     # pyflakes
    "FA",    # flake8-funny-annotations
    "FIX",   # flake8-fixme
    "FLY",   # flake8-flynt
    "FURB",  # refurb
    "I",     # isort
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "N",     # pep8-naming
    "NPY",   # numpy-specific rules
    "PD",    # pandas-vet
    "PERF",  # perflint
    "PGH",   # pygrep-hook
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # ruff specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "TC",    # flake8-type-checking
    "TD",    # flake8-todo
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle - warnings
]
ignore = [
    "ANN001",  # Missing type annotation for function argument `X`  # TO REMOVE
    "ANN201",  # Missing return type annotation for public function  # TO REMOVE
    "ANN202",  # Missing return type annotation for private function  # TO REMOVE
    "ANN204",  #  Missing return type annotation for special method  # TO REMOVE
    "ANN401",  #  Allow  typing.Any
    "ARG002", #  Unused argument  # TO REMOVE
    "B008",   #  Do not perform function call `StandardScaler` in argument defaults  # TO REMOVE
    "B020",   #  Loop control variable `generated_smiles` overrides iterable it iterates  # TO REMOVE
    "B024",   #  `xxx` is an abstract base class, but it has no abstract methods or properties  # TO REMOVE
    "B027",   #  `xxx` is an empty method in an abstract base class, but has no abstract decorator  # TO REMOVE
    "COM812", # Trailing comma missing # TO REMOVE
    "DOC202", # Docstring should not have a returns section because the function doesn't return anything  # TO REMOVE
    "D203", # 1 blank line required before class docstring  # TO REMOVE
    "D213", # blank-line-before-class-docstring
    "D413", # missing-blank-line-after-last-section # TO REMOVE
    "D418", # Function decorated with `@overload` shouldn't contain a docstring"  # TO REMOVE
    "E501", # line-too-long # TO REMOVE
    "ERA001",  # Found commented-out code  # TO REMOVE
    "FA100",  # Add `from __future__ import annotations`  # TO REMOVE
    "FA102",  # Missing `from __future__ import annotations`  # TO REMOVE
    "FURB113", # Use `xxx.extend(...)` instead of repeatedly calling `xxx.append()  # TO REMOVE
    "FURB171", # [*] Membership test against single-item container  # TO REMOVE
    "FURB177", #  Prefer `Path.cwd()` over `Path().resolve()  # TO REMOVE
    "N803",  #  Argument name should be lowercase  # TO REMOVE
    "N806",  #  Variable in function should be lowercase  # TO REMOVE
    "N813",  #  Camelcase `rdFingerprintGenerator` imported as lowercase `rdkit_fp`  # TO REMOVE
    "PD011",   # Use `.to_numpy()` instead of `.values`  # TO REMOVE
    "PD901",   #  Avoid using the generic variable name `df` for DataFrames  # TO REMOVE
    "PGH003",  # Blanket type ignore for types
    "PGH004",  # Use specific rule codes when using `noqa`  # TO REMOVE
    "PERF203",  # `try`-`except` within a loop incurs performance overhead  # TO REMOVE
    "PERF401", # Use a list comprehension to create a transformed list  # TO REMOVE
    "PIE804",  # Unnecessary `dict` kwargs  # TO REMOVE
    "PLC1901", # `rest == ""` can be simplified to `not rest` as an empty string is falsey  # TO REMOVE
    "PLR0911", # Too many return statements (8 > 6)  # TO REMOVE
    "PLR0912", # Too many branches (19 > 12)  # TO REMOVE
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals    # TO REMOVE
    "PLR2004", # Magic value used in comparison  # TO REMOVE
    "PLC2701", # Private name import  # TO REMOVE
    "PLR0917", # too-many-positional-arguments   # TO REMOVE
    "PLR6301", #  could be a function, class method, or static method # TO REMOVE
    "PLW2901", # Redefined loop variable
    "PLW3201", #  Dunder method `xxxx` has no special meaning  # TO REMOVE
    "PTH123",  # `open()` should be replaced by `Path.open()`  # TO REMOVE
    "PTH201",  # Do not pass the current directory explicitly to `Path`  # TO REMOVE
    "PYI018",  # Private TypeVar `_T` is never used  # TO REMOVE
    "PYI056",  # Calling `.append()` on `__all__` may not be supported by all type checkers # TO REMOVE
    "RET504",  # Unnecessary assignment  # TO REMOVE
    "RUF005",  # Consider iterable unpacking instead of concatenation  # TO REMOVE
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`  # TO REMOVE
    "RUF100", #  Unused noqa  # TO REMOVE
    "S101",   # Use of `assert` detected  # TO REMOVE
    "S311",  #  suspicious-non-cryptographic-random-usage
    "SIM102",  # Use a single `if` statement instead of nested `if` statements # TO REMOVE
    "SIM103",  # Return the condition directly  # TO REMOVE
    "SIM105",  #  Use `contextlib.suppress(RuntimeError)` instead of `try`-`except`-`pass`  # TO REMOVE
    "SIM108",  # Use ternary operator  # TO REMOVE
    "SIM110",  # Use return any() instead of `for` loop  # TO REMOVE
    "SIM114",  # Combine `if` branches  # TO REMOVE
    "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements  # TO REMOVE
    "SIM401",  # Use `xxx` instead of an `if` block  # TO REMOVE
    "SLF001",  # Private member accessed  # TO REMOVE
    "T201",    # print found  # TO REMOVE
    "TC001",   # Move application import  `xxx` into a type-checking block  # TO REMOVE
    "TC002",   # Move third-party import `xxx` into a type-checking block  # TO REMOVE
    "TC003",   # Move standard library import `xxx` into a type-checking block  # TO REMOVE
]
 [tool.ruff.lint.per-file-ignores]
 "*.ipynb" = [
     "PLE1142",
     "F704",
     "T201"
 ]
 "test_*" = [
     "S101",
     "S404",
     "S603",
     "S607"
 ]

[tool.ruff.lint.pylint]
max-positional-args = 10

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"


[tool.setuptools.packages.find]
exclude = ["tests", "docs"]

[tool.setuptools.package-data]
"inkypi" = ["py.typed"]
